# rust-in-practice-code

./: .gitignore  .gitmodules  Readme.md
chapter-01/hello_rust/: Cargo.toml
chapter-01/hello_rust/src/: main.rs
chapter-02/use_external_crate/: Cargo.toml
chapter-02/use_external_crate/src/: main.rs
chapter-03/gprl-compute/: Cargo.toml
chapter-03/gprl-compute/src/: main.rs
chapter-03/gprl-log-demo/: Cargo.toml
chapter-03/gprl-log-demo/src/: main.rs
chapter-03/gprl-log4rs-demo/: Cargo.toml
chapter-03/gprl-log4rs-demo/config/: log4rs.yml
chapter-03/gprl-log4rs-demo/src/: main.rs
chapter05/gprl-redis-demo/: Cargo.toml
chapter05/gprl-redis-demo/src/: main.rs
chapter06/: sqlite-demo.db
chapter06/gprl-sqlite3-demo/: Cargo.toml  gprl-sqlite3-demo.db
chapter06/gprl-sqlite3-demo/src/: main.rs
chapter09/gprl-glade-demo/: Cargo.toml
chapter09/gprl-glade-demo/src/: gprl-glade-demo.glade  main.rs
chapter09/gprl-gtk-demo/: Cargo.toml
chapter09/gprl-gtk-demo/src/: main.rs
